[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/game/game.gd" type="Script" id=1]
[ext_resource path="res://resources/font-blockily.tres" type="DynamicFont" id=2]
[ext_resource path="res://elements/grid/grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/game/button-rotate-left.svg" type="Texture" id=4]
[ext_resource path="res://ui/game/button-pause.svg" type="Texture" id=5]
[ext_resource path="res://ui/game/button-rotate-right.svg" type="Texture" id=6]


[sub_resource type="Animation" id=1]
resource_name = "blink-game-over"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("main_layout/header/game_over_label:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 0, 0, 0 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="game" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )

[node name="main_layout" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 712.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="header" type="HBoxContainer" parent="main_layout"]
margin_right = 704.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="game_over_label" type="Label" parent="main_layout/header"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 1.0
margin_right = 144.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.2, 0, 1 )
text = "GAME OVER"

[node name="spacer" type="Container" parent="main_layout/header"]
margin_left = 148.0
margin_right = 684.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="points" type="Label" parent="main_layout/header"]
margin_left = 688.0
margin_right = 704.0
margin_bottom = 16.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.2, 0, 1 )
text = "0"
align = 2

[node name="grid_container" type="MarginContainer" parent="main_layout"]
margin_top = 24.0
margin_right = 704.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 64
custom_constants/margin_top = 8
custom_constants/margin_left = 64
custom_constants/margin_bottom = 8

[node name="grid" parent="main_layout/grid_container" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 8.0
margin_right = 640.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="game_controls" type="HBoxContainer" parent="main_layout"]
margin_top = 280.0
margin_right = 704.0
margin_bottom = 344.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="left_button" type="TextureButton" parent="main_layout/game_controls"]
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 80, 64 )
action_mode = 0
texture_normal = ExtResource( 4 )

[node name="spacer" type="CenterContainer" parent="main_layout/game_controls"]
margin_left = 80.0
margin_right = 624.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="pause_button" type="TextureButton" parent="main_layout/game_controls/spacer"]
margin_left = 240.0
margin_top = 20.0
margin_right = 304.0
margin_bottom = 44.0
rect_min_size = Vector2( 64, 24 )
action_mode = 0
texture_normal = ExtResource( 5 )

[node name="right_button" type="TextureButton" parent="main_layout/game_controls"]
margin_left = 624.0
margin_right = 704.0
margin_bottom = 64.0
rect_min_size = Vector2( 80, 64 )
action_mode = 0
texture_normal = ExtResource( 6 )

[node name="animation_player" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/blink-game-over = SubResource( 1 )
[connection signal="game_over" from="main_layout/grid_container/grid" to="." method="game_over"]
[connection signal="score_updated" from="main_layout/grid_container/grid" to="." method="update_score"]
[connection signal="pressed" from="main_layout/game_controls/left_button" to="main_layout/grid_container/grid" method="turn_left"]
[connection signal="pressed" from="main_layout/game_controls/spacer/pause_button" to="main_layout/grid_container/grid" method="pause"]
[connection signal="pressed" from="main_layout/game_controls/right_button" to="main_layout/grid_container/grid" method="turn_right"]
