[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/game/game.gd" type="Script" id=1]
[ext_resource path="res://shared/font-blockily.tres" type="DynamicFont" id=2]
[ext_resource path="res://elements/grid/grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/game/button-rotate-left.svg" type="Texture" id=4]
[ext_resource path="res://ui/game/button-pause.svg" type="Texture" id=5]
[ext_resource path="res://ui/game/button-rotate-right.svg" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource_name = "blink-score"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Layout/Header/Points:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ Color( 0.0980392, 0.2, 0, 1 ), Color( 0.0980392, 0.2, 0, 0 ), Color( 0.0980392, 0.2, 0, 0 ) ]
}

[node name="Game" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 32.0, 560.0 ],
"_edit_vertical_guides_": [ 8.0, 352.0 ]
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink-score = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Layout" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 352.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Header" type="HBoxContainer" parent="MarginContainer/Layout"]
margin_right = 344.0
margin_bottom = 14.0

[node name="GameOverLabel" type="Label" parent="MarginContainer/Layout/Header"]
visible = false
margin_right = 144.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.2, 0, 1 )
text = "GAME OVER"

[node name="Spacer" type="Container" parent="MarginContainer/Layout/Header"]
margin_right = 324.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Points" type="Label" parent="MarginContainer/Layout/Header"]
margin_left = 328.0
margin_right = 344.0
margin_bottom = 14.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.2, 0, 1 )
text = "0"
align = 2

[node name="GridContainer" type="Container" parent="MarginContainer/Layout"]
margin_top = 14.0
margin_right = 344.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid" parent="MarginContainer/Layout/GridContainer" instance=ExtResource( 3 )]
grid_width = 21
grid_height = 33

[node name="Controls" type="HBoxContainer" parent="MarginContainer/Layout"]
margin_top = 560.0
margin_right = 344.0
margin_bottom = 624.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="LeftButton" type="TextureButton" parent="MarginContainer/Layout/Controls"]
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 80, 64 )
action_mode = 0
texture_normal = ExtResource( 4 )

[node name="Spacer" type="CenterContainer" parent="MarginContainer/Layout/Controls"]
margin_left = 80.0
margin_right = 264.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="PauseButton" type="TextureButton" parent="MarginContainer/Layout/Controls/Spacer"]
margin_left = 60.0
margin_top = 20.0
margin_right = 124.0
margin_bottom = 44.0
rect_min_size = Vector2( 64, 24 )
action_mode = 0
texture_normal = ExtResource( 5 )

[node name="RightButton" type="TextureButton" parent="MarginContainer/Layout/Controls"]
margin_left = 264.0
margin_right = 344.0
margin_bottom = 64.0
rect_min_size = Vector2( 80, 64 )
action_mode = 0
texture_normal = ExtResource( 6 )

[connection signal="game_over" from="MarginContainer/Layout/GridContainer/Grid" to="." method="game_over"]
[connection signal="score_updated" from="MarginContainer/Layout/GridContainer/Grid" to="." method="update_score"]
[connection signal="pressed" from="MarginContainer/Layout/Controls/LeftButton" to="." method="turn_left"]
[connection signal="pressed" from="MarginContainer/Layout/Controls/Spacer/PauseButton" to="." method="pause"]
[connection signal="pressed" from="MarginContainer/Layout/Controls/RightButton" to="." method="turn_right"]
